--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ indexmap = "2.5.0"
 quickcheck = { optional = true, version = "0.8", default-features = false }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
+bevy_reflect = "0.15"
 rayon = { version = "1.5.3", optional = true }
 
 [dev-dependencies]
